--- a/jit/tests/basic-usage.test.css
+++ b/jit/tests/basic-usage.test.css
@@ -723,7 +723,7 @@
 }
 .transition {
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow,
-    transform;
+    transform, filter, backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
