--- a/__tests__/fixtures/tailwind-output-no-color-opacity.css
+++ b/__tests__/fixtures/tailwind-output-no-color-opacity.css
@@ -20224,10 +20224,6 @@ video {
   --tw-ring-opacity: 1;
 }
 
-.ring-opacity {
-  --tw-ring-opacity: 0.5;
-}
-
 .focus-within\:ring-opacity-0:focus-within {
   --tw-ring-opacity: 0;
 }
@@ -20288,10 +20284,6 @@ video {
   --tw-ring-opacity: 1;
 }
 
-.focus-within\:ring-opacity:focus-within {
-  --tw-ring-opacity: 0.5;
-}
-
 .focus\:ring-opacity-0:focus {
   --tw-ring-opacity: 0;
 }
@@ -20350,10 +20342,6 @@ video {
 
 .focus\:ring-opacity-100:focus {
   --tw-ring-opacity: 1;
-}
-
-.focus\:ring-opacity:focus {
-  --tw-ring-opacity: 0.5;
 }
 
 .fill-current {
@@ -22197,39 +22185,39 @@ video {
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
 
-normal-nums .normal-nums {
+.normal-nums {
   font-variant-numeric: normal;
 }
 
-ordinal .ordinal {
+.ordinal {
   --tw-ordinal: ordinal;
 }
 
-slashed-zero .slashed-zero {
+.slashed-zero {
   --tw-slashed-zero: slashed-zero;
 }
 
-lining-nums .lining-nums {
+.lining-nums {
   --tw-numeric-figure: lining-nums;
 }
 
-oldstyle-nums .oldstyle-nums {
+.oldstyle-nums {
   --tw-numeric-figure: oldstyle-nums;
 }
 
-proportional-nums .proportional-nums {
+.proportional-nums {
   --tw-numeric-spacing: proportional-nums;
 }
 
-tabular-nums .tabular-nums {
+.tabular-nums {
   --tw-numeric-spacing: tabular-nums;
 }
 
-diagonal-fractions .diagonal-fractions {
+.diagonal-fractions {
   --tw-numeric-fraction: diagonal-fractions;
 }
 
-stacked-fractions .stacked-fractions {
+.stacked-fractions {
   --tw-numeric-fraction: stacked-fractions;
 }
 
@@ -26482,10 +26470,6 @@ stacked-fractions .stacked-fractions {
   transition-duration: 150ms;
 }
 
-.ease {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .ease-linear {
   transition-timing-function: linear;
 }
@@ -26532,10 +26516,6 @@ stacked-fractions .stacked-fractions {
 
 .duration-1000 {
   transition-duration: 1000ms;
-}
-
-.duration {
-  transition-duration: 150ms;
 }
 
 .delay-75 {
@@ -46933,10 +46913,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .sm\:ring-opacity {
-    --tw-ring-opacity: 0.5;
-  }
-
   .sm\:focus-within\:ring-opacity-0:focus-within {
     --tw-ring-opacity: 0;
   }
@@ -46997,10 +46973,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .sm\:focus-within\:ring-opacity:focus-within {
-    --tw-ring-opacity: 0.5;
-  }
-
   .sm\:focus\:ring-opacity-0:focus {
     --tw-ring-opacity: 0;
   }
@@ -47059,10 +47031,6 @@ stacked-fractions .stacked-fractions {
 
   .sm\:focus\:ring-opacity-100:focus {
     --tw-ring-opacity: 1;
-  }
-
-  .sm\:focus\:ring-opacity:focus {
-    --tw-ring-opacity: 0.5;
   }
 
   .sm\:fill-current {
@@ -48906,39 +48874,39 @@ stacked-fractions .stacked-fractions {
     font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
   }
 
-  normal-nums .sm\:normal-nums {
+  .sm\:normal-nums {
     font-variant-numeric: normal;
   }
 
-  ordinal .sm\:ordinal {
+  .sm\:ordinal {
     --tw-ordinal: ordinal;
   }
 
-  slashed-zero .sm\:slashed-zero {
+  .sm\:slashed-zero {
     --tw-slashed-zero: slashed-zero;
   }
 
-  lining-nums .sm\:lining-nums {
+  .sm\:lining-nums {
     --tw-numeric-figure: lining-nums;
   }
 
-  oldstyle-nums .sm\:oldstyle-nums {
+  .sm\:oldstyle-nums {
     --tw-numeric-figure: oldstyle-nums;
   }
 
-  proportional-nums .sm\:proportional-nums {
+  .sm\:proportional-nums {
     --tw-numeric-spacing: proportional-nums;
   }
 
-  tabular-nums .sm\:tabular-nums {
+  .sm\:tabular-nums {
     --tw-numeric-spacing: tabular-nums;
   }
 
-  diagonal-fractions .sm\:diagonal-fractions {
+  .sm\:diagonal-fractions {
     --tw-numeric-fraction: diagonal-fractions;
   }
 
-  stacked-fractions .sm\:stacked-fractions {
+  .sm\:stacked-fractions {
     --tw-numeric-fraction: stacked-fractions;
   }
 
@@ -53191,10 +53159,6 @@ stacked-fractions .stacked-fractions {
     transition-duration: 150ms;
   }
 
-  .sm\:ease {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
   .sm\:ease-linear {
     transition-timing-function: linear;
   }
@@ -53241,10 +53205,6 @@ stacked-fractions .stacked-fractions {
 
   .sm\:duration-1000 {
     transition-duration: 1000ms;
-  }
-
-  .sm\:duration {
-    transition-duration: 150ms;
   }
 
   .sm\:delay-75 {
@@ -73520,10 +73480,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .md\:ring-opacity {
-    --tw-ring-opacity: 0.5;
-  }
-
   .md\:focus-within\:ring-opacity-0:focus-within {
     --tw-ring-opacity: 0;
   }
@@ -73584,10 +73540,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .md\:focus-within\:ring-opacity:focus-within {
-    --tw-ring-opacity: 0.5;
-  }
-
   .md\:focus\:ring-opacity-0:focus {
     --tw-ring-opacity: 0;
   }
@@ -73646,10 +73598,6 @@ stacked-fractions .stacked-fractions {
 
   .md\:focus\:ring-opacity-100:focus {
     --tw-ring-opacity: 1;
-  }
-
-  .md\:focus\:ring-opacity:focus {
-    --tw-ring-opacity: 0.5;
   }
 
   .md\:fill-current {
@@ -75493,39 +75441,39 @@ stacked-fractions .stacked-fractions {
     font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
   }
 
-  normal-nums .md\:normal-nums {
+  .md\:normal-nums {
     font-variant-numeric: normal;
   }
 
-  ordinal .md\:ordinal {
+  .md\:ordinal {
     --tw-ordinal: ordinal;
   }
 
-  slashed-zero .md\:slashed-zero {
+  .md\:slashed-zero {
     --tw-slashed-zero: slashed-zero;
   }
 
-  lining-nums .md\:lining-nums {
+  .md\:lining-nums {
     --tw-numeric-figure: lining-nums;
   }
 
-  oldstyle-nums .md\:oldstyle-nums {
+  .md\:oldstyle-nums {
     --tw-numeric-figure: oldstyle-nums;
   }
 
-  proportional-nums .md\:proportional-nums {
+  .md\:proportional-nums {
     --tw-numeric-spacing: proportional-nums;
   }
 
-  tabular-nums .md\:tabular-nums {
+  .md\:tabular-nums {
     --tw-numeric-spacing: tabular-nums;
   }
 
-  diagonal-fractions .md\:diagonal-fractions {
+  .md\:diagonal-fractions {
     --tw-numeric-fraction: diagonal-fractions;
   }
 
-  stacked-fractions .md\:stacked-fractions {
+  .md\:stacked-fractions {
     --tw-numeric-fraction: stacked-fractions;
   }
 
@@ -79778,10 +79726,6 @@ stacked-fractions .stacked-fractions {
     transition-duration: 150ms;
   }
 
-  .md\:ease {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
   .md\:ease-linear {
     transition-timing-function: linear;
   }
@@ -79828,10 +79772,6 @@ stacked-fractions .stacked-fractions {
 
   .md\:duration-1000 {
     transition-duration: 1000ms;
-  }
-
-  .md\:duration {
-    transition-duration: 150ms;
   }
 
   .md\:delay-75 {
@@ -100107,10 +100047,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .lg\:ring-opacity {
-    --tw-ring-opacity: 0.5;
-  }
-
   .lg\:focus-within\:ring-opacity-0:focus-within {
     --tw-ring-opacity: 0;
   }
@@ -100171,10 +100107,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .lg\:focus-within\:ring-opacity:focus-within {
-    --tw-ring-opacity: 0.5;
-  }
-
   .lg\:focus\:ring-opacity-0:focus {
     --tw-ring-opacity: 0;
   }
@@ -100233,10 +100165,6 @@ stacked-fractions .stacked-fractions {
 
   .lg\:focus\:ring-opacity-100:focus {
     --tw-ring-opacity: 1;
-  }
-
-  .lg\:focus\:ring-opacity:focus {
-    --tw-ring-opacity: 0.5;
   }
 
   .lg\:fill-current {
@@ -102080,39 +102008,39 @@ stacked-fractions .stacked-fractions {
     font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
   }
 
-  normal-nums .lg\:normal-nums {
+  .lg\:normal-nums {
     font-variant-numeric: normal;
   }
 
-  ordinal .lg\:ordinal {
+  .lg\:ordinal {
     --tw-ordinal: ordinal;
   }
 
-  slashed-zero .lg\:slashed-zero {
+  .lg\:slashed-zero {
     --tw-slashed-zero: slashed-zero;
   }
 
-  lining-nums .lg\:lining-nums {
+  .lg\:lining-nums {
     --tw-numeric-figure: lining-nums;
   }
 
-  oldstyle-nums .lg\:oldstyle-nums {
+  .lg\:oldstyle-nums {
     --tw-numeric-figure: oldstyle-nums;
   }
 
-  proportional-nums .lg\:proportional-nums {
+  .lg\:proportional-nums {
     --tw-numeric-spacing: proportional-nums;
   }
 
-  tabular-nums .lg\:tabular-nums {
+  .lg\:tabular-nums {
     --tw-numeric-spacing: tabular-nums;
   }
 
-  diagonal-fractions .lg\:diagonal-fractions {
+  .lg\:diagonal-fractions {
     --tw-numeric-fraction: diagonal-fractions;
   }
 
-  stacked-fractions .lg\:stacked-fractions {
+  .lg\:stacked-fractions {
     --tw-numeric-fraction: stacked-fractions;
   }
 
@@ -106365,10 +106293,6 @@ stacked-fractions .stacked-fractions {
     transition-duration: 150ms;
   }
 
-  .lg\:ease {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
   .lg\:ease-linear {
     transition-timing-function: linear;
   }
@@ -106415,10 +106339,6 @@ stacked-fractions .stacked-fractions {
 
   .lg\:duration-1000 {
     transition-duration: 1000ms;
-  }
-
-  .lg\:duration {
-    transition-duration: 150ms;
   }
 
   .lg\:delay-75 {
@@ -126694,10 +126614,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .xl\:ring-opacity {
-    --tw-ring-opacity: 0.5;
-  }
-
   .xl\:focus-within\:ring-opacity-0:focus-within {
     --tw-ring-opacity: 0;
   }
@@ -126758,10 +126674,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .xl\:focus-within\:ring-opacity:focus-within {
-    --tw-ring-opacity: 0.5;
-  }
-
   .xl\:focus\:ring-opacity-0:focus {
     --tw-ring-opacity: 0;
   }
@@ -126820,10 +126732,6 @@ stacked-fractions .stacked-fractions {
 
   .xl\:focus\:ring-opacity-100:focus {
     --tw-ring-opacity: 1;
-  }
-
-  .xl\:focus\:ring-opacity:focus {
-    --tw-ring-opacity: 0.5;
   }
 
   .xl\:fill-current {
@@ -128667,39 +128575,39 @@ stacked-fractions .stacked-fractions {
     font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
   }
 
-  normal-nums .xl\:normal-nums {
+  .xl\:normal-nums {
     font-variant-numeric: normal;
   }
 
-  ordinal .xl\:ordinal {
+  .xl\:ordinal {
     --tw-ordinal: ordinal;
   }
 
-  slashed-zero .xl\:slashed-zero {
+  .xl\:slashed-zero {
     --tw-slashed-zero: slashed-zero;
   }
 
-  lining-nums .xl\:lining-nums {
+  .xl\:lining-nums {
     --tw-numeric-figure: lining-nums;
   }
 
-  oldstyle-nums .xl\:oldstyle-nums {
+  .xl\:oldstyle-nums {
     --tw-numeric-figure: oldstyle-nums;
   }
 
-  proportional-nums .xl\:proportional-nums {
+  .xl\:proportional-nums {
     --tw-numeric-spacing: proportional-nums;
   }
 
-  tabular-nums .xl\:tabular-nums {
+  .xl\:tabular-nums {
     --tw-numeric-spacing: tabular-nums;
   }
 
-  diagonal-fractions .xl\:diagonal-fractions {
+  .xl\:diagonal-fractions {
     --tw-numeric-fraction: diagonal-fractions;
   }
 
-  stacked-fractions .xl\:stacked-fractions {
+  .xl\:stacked-fractions {
     --tw-numeric-fraction: stacked-fractions;
   }
 
@@ -132952,10 +132860,6 @@ stacked-fractions .stacked-fractions {
     transition-duration: 150ms;
   }
 
-  .xl\:ease {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
   .xl\:ease-linear {
     transition-timing-function: linear;
   }
@@ -133002,10 +132906,6 @@ stacked-fractions .stacked-fractions {
 
   .xl\:duration-1000 {
     transition-duration: 1000ms;
-  }
-
-  .xl\:duration {
-    transition-duration: 150ms;
   }
 
   .xl\:delay-75 {
@@ -153281,10 +153181,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .\32xl\:ring-opacity {
-    --tw-ring-opacity: 0.5;
-  }
-
   .\32xl\:focus-within\:ring-opacity-0:focus-within {
     --tw-ring-opacity: 0;
   }
@@ -153345,10 +153241,6 @@ stacked-fractions .stacked-fractions {
     --tw-ring-opacity: 1;
   }
 
-  .\32xl\:focus-within\:ring-opacity:focus-within {
-    --tw-ring-opacity: 0.5;
-  }
-
   .\32xl\:focus\:ring-opacity-0:focus {
     --tw-ring-opacity: 0;
   }
@@ -153407,10 +153299,6 @@ stacked-fractions .stacked-fractions {
 
   .\32xl\:focus\:ring-opacity-100:focus {
     --tw-ring-opacity: 1;
-  }
-
-  .\32xl\:focus\:ring-opacity:focus {
-    --tw-ring-opacity: 0.5;
   }
 
   .\32xl\:fill-current {
@@ -155254,39 +155142,39 @@ stacked-fractions .stacked-fractions {
     font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
   }
 
-  normal-nums .\32xl\:normal-nums {
+  .\32xl\:normal-nums {
     font-variant-numeric: normal;
   }
 
-  ordinal .\32xl\:ordinal {
+  .\32xl\:ordinal {
     --tw-ordinal: ordinal;
   }
 
-  slashed-zero .\32xl\:slashed-zero {
+  .\32xl\:slashed-zero {
     --tw-slashed-zero: slashed-zero;
   }
 
-  lining-nums .\32xl\:lining-nums {
+  .\32xl\:lining-nums {
     --tw-numeric-figure: lining-nums;
   }
 
-  oldstyle-nums .\32xl\:oldstyle-nums {
+  .\32xl\:oldstyle-nums {
     --tw-numeric-figure: oldstyle-nums;
   }
 
-  proportional-nums .\32xl\:proportional-nums {
+  .\32xl\:proportional-nums {
     --tw-numeric-spacing: proportional-nums;
   }
 
-  tabular-nums .\32xl\:tabular-nums {
+  .\32xl\:tabular-nums {
     --tw-numeric-spacing: tabular-nums;
   }
 
-  diagonal-fractions .\32xl\:diagonal-fractions {
+  .\32xl\:diagonal-fractions {
     --tw-numeric-fraction: diagonal-fractions;
   }
 
-  stacked-fractions .\32xl\:stacked-fractions {
+  .\32xl\:stacked-fractions {
     --tw-numeric-fraction: stacked-fractions;
   }
 
@@ -159539,10 +159427,6 @@ stacked-fractions .stacked-fractions {
     transition-duration: 150ms;
   }
 
-  .\32xl\:ease {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
   .\32xl\:ease-linear {
     transition-timing-function: linear;
   }
@@ -159589,10 +159473,6 @@ stacked-fractions .stacked-fractions {
 
   .\32xl\:duration-1000 {
     transition-duration: 1000ms;
-  }
-
-  .\32xl\:duration {
-    transition-duration: 150ms;
   }
 
   .\32xl\:delay-75 {
