Fixes, rebuild fixtures

--- a/tests/fixtures/tailwind-output-no-color-opacity.css
+++ b/tests/fixtures/tailwind-output-no-color-opacity.css
@@ -24099,6 +24099,14 @@ video {
   --tw-ring-inset: inset;
 }
 
+.focus-within\:ring-inset:focus-within {
+  --tw-ring-inset: inset;
+}
+
+.focus\:ring-inset:focus {
+  --tw-ring-inset: inset;
+}
+
 .ring-transparent {
   --tw-ring-color: transparent;
 }
@@ -38219,6 +38227,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .sm\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .sm\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .sm\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -38277,6 +38293,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .sm\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .sm\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .sm\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -50727,6 +50751,18 @@ video {
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+
+  .sm\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .sm\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .sm\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
   }
 
   .sm\:ring-transparent {
@@ -64790,6 +64826,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .md\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .md\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .md\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -64848,6 +64892,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .md\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .md\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .md\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -77298,6 +77350,18 @@ video {
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+
+  .md\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .md\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .md\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
   }
 
   .md\:ring-transparent {
@@ -91361,6 +91425,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .lg\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .lg\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .lg\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -91419,6 +91491,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .lg\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .lg\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .lg\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -103869,6 +103949,18 @@ video {
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+
+  .lg\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .lg\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .lg\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
   }
 
   .lg\:ring-transparent {
@@ -117932,6 +118024,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .xl\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .xl\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .xl\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -117990,6 +118090,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .xl\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .xl\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .xl\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -130440,6 +130548,18 @@ video {
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+
+  .xl\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .xl\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .xl\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
   }
 
   .xl\:ring-transparent {
@@ -144503,6 +144623,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .\32xl\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .\32xl\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .\32xl\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -144561,6 +144689,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .\32xl\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .\32xl\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .\32xl\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -157011,6 +157147,18 @@ video {
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+
+  .\32xl\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .\32xl\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .\32xl\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
   }
 
   .\32xl\:ring-transparent {
