--- a/tests/fixtures/tailwind-output.css
+++ b/tests/fixtures/tailwind-output.css
@@ -26655,6 +26655,14 @@ video {
   --tw-ring-inset: inset;
 }
 
+.focus-within\:ring-inset:focus-within {
+  --tw-ring-inset: inset;
+}
+
+.focus\:ring-inset:focus {
+  --tw-ring-inset: inset;
+}
+
 .ring-transparent {
   --tw-ring-color: transparent;
 }
@@ -40775,6 +40783,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .sm\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .sm\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .sm\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -40833,6 +40849,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .sm\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .sm\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .sm\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -55841,6 +55865,18 @@ video {
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   }
 
+  .sm\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .sm\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .sm\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
+  }
+
   .sm\:ring-transparent {
     --tw-ring-color: transparent;
   }
@@ -69902,6 +69938,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .md\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .md\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .md\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -69960,6 +70004,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .md\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .md\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .md\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -84968,6 +85020,18 @@ video {
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   }
 
+  .md\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .md\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .md\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
+  }
+
   .md\:ring-transparent {
     --tw-ring-color: transparent;
   }
@@ -99029,6 +99093,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .lg\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .lg\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .lg\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -99087,6 +99159,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .lg\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .lg\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .lg\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -114095,6 +114175,18 @@ video {
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   }
 
+  .lg\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .lg\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .lg\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
+  }
+
   .lg\:ring-transparent {
     --tw-ring-color: transparent;
   }
@@ -128156,6 +128248,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .xl\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .xl\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .xl\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -128214,6 +128314,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .xl\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .xl\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .xl\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -143222,6 +143330,18 @@ video {
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   }
 
+  .xl\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .xl\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .xl\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
+  }
+
   .xl\:ring-transparent {
     --tw-ring-color: transparent;
   }
@@ -157283,6 +157403,14 @@ video {
     margin-bottom: calc(-0.875rem * var(--tw-space-y-reverse));
   }
 
+  .\32xl\:space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 1;
+  }
+
+  .\32xl\:space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 1;
+  }
+
   .\32xl\:divide-x-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(0px * var(--tw-divide-x-reverse));
@@ -157341,6 +157469,14 @@ video {
     --tw-divide-y-reverse: 0;
     border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
     border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+  }
+
+  .\32xl\:divide-y-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 1;
+  }
+
+  .\32xl\:divide-x-reverse > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 1;
   }
 
   .\32xl\:divide-solid > :not([hidden]) ~ :not([hidden]) {
@@ -172347,6 +172483,18 @@ video {
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+
+  .\32xl\:ring-inset {
+    --tw-ring-inset: inset;
+  }
+
+  .\32xl\:focus-within\:ring-inset:focus-within {
+    --tw-ring-inset: inset;
+  }
+
+  .\32xl\:focus\:ring-inset:focus {
+    --tw-ring-inset: inset;
   }
 
   .\32xl\:ring-transparent {
